--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,22 +1,21 @@
 .calendar {
   margin: auto;
-  padding: $calendarPadding;
-  width: $calendarWidth + ($calendarPadding * 2);
 
   display: flex;
   flex-wrap: wrap;
   gap: $dayGap;
+  padding: 100px $calendarPadding;
+  width: $calendarWidth + ($calendarPadding * 2);
 
   &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: $dayHeight;
     width: $dayWidth;
 
     background-color: #eee;
     border: 1px solid black;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     transition: all 0.5s;
   }
