--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import './utils/variables';
-@import './blocks/calendar';
+@import "./utils/variables";
+@import "./blocks/calendar";
 
 body {
   margin: 0;
