--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,7 @@
-$item-size: 100px;
-$block-height: 100px;
-$gap: 1px;
-$start-days: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6
-);
+@import "variables";
 
 @each $start-day, $start-day-index in $start-days {
-  .calendar-block--start--day--#{$start-day} .calendar-block__day:first-child {
+  .calendar--start--day--#{$start-day} .calendar__day:first-child {
     margin-left: ($item-size + $gap) * $start-day-index;
   }
 }
@@ -23,7 +12,7 @@ body {
   justify-content: center;
 }
 
-.calendar-block {
+.calendar {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
@@ -31,39 +20,40 @@ body {
   width: ($item-size + $gap) * 7;
 
   &__day {
+    width: $item-size;
+    height: $item-size;
+    background-color: #eee;
+    border: 1px solid black;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    transform: translateY(0);
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+    &::before {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      justify-content: center;
+      align-items: center;
+    }
+
     @for $i from 1 through 31 {
-      &:nth-child(#{$i}) {
-        width: $item-size;
-        height: $item-size;
-        background-color: #eee;
-        border: 1px solid black;
-        box-sizing: border-box;
-        position: relative;
-      }
-
-      &:hover {
-        cursor: pointer;
-        background-color: pink;
-        transition: all 0.5s ease;
-        transform: translateY(-20px);
-      }
-
       &:nth-child(#{$i})::before {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-        justify-content: center;
-        align-items: center;
         content: $i + "";
       }
     }
   }
 
   @for $length from 28 through 31 {
-    &--month--length--#{$length}
-    .calendar-block__day:nth-child(n+#{$length + 1}) {
+    &--month--length--#{$length} .calendar__day:nth-child(n+#{$length + 1}) {
       display: none;
     }
   }
