--- a/src/styles/blocks/month.scss
+++ b/src/styles/blocks/month.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: $box-padding;
+  padding-top: 50px;
   width: (7 * $day-width) + ($box-padding * 2);
 
   &__day {
