--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,3 +3,11 @@ $day-width: 100px;
 $day-height: 100px;
 $initial-transition: 0.5s;
 $box-padding: 10px;
+$days-of-week:
+  "mon" 0,
+  "tue" 100,
+  "wed" 200,
+  "thu" 300,
+  "fri" 400,
+  "sat" 500,
+  "sun" 600, ;
