--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 
-@import "./blocks/month";
+@import "./blocks/calendar";
 @import "./blocks/page";
 
 * {
