--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,7 +2,9 @@ $cell-size: 100px;
 $border-width: 1px;
 $border-color: #000;
 $gap: 1px;
+$gaps: 2.4px;
 $padding: 10px;
 $font-size: 30px;
 $cell-background: #eee;
 $hover-color: pink;
+$start-days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
