--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
+@import "utils/variables.scss";
+
+@import "blocks/calendar.scss";
+@import "blocks/start-day.scss";
+@import "blocks/month-length.scss";
+
 body {
+  display: flex;
+  justify-content: center;
+  text-align: center;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
