add task solution

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,3 +3,4 @@ $gap-size:1px;
 $transition-duration: 500ms;
 $days-bg-color:#eee;
 $hover-bg-color:pink;
+$days: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
