--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,8 @@
 @import "utils/variables";
-@import "blocks/calendar__day";
-@import "blocks/calendar--month-length";
-@import "blocks/calendar--start-day";
+@import "blocks/calendar";
+@import "blocks/container";
 
 body {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
 }
