--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,8 +7,7 @@
   flex-wrap: wrap;
   display: flex;
   align-items: center;
-
-  width: $day-block-size * 7 + $gap-size * 6;
+  width: $day-block-size * 7 + $gap-size * 6 + 40px;
   gap: $gap-size;
 
   &__day {
