--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+@import "../utils/variables.scss";
+
 body {
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  margin: 100px auto;
+  padding: $cell-padding;
+  gap: $cell-gap;
+
+  width: 7 * ($cell-size + $cell-padding);
+
+  @for $month-length from 28 through 31 {
+    &--month-length--#{$month-length} {
+      .calendar__day:nth-child(n + #{$month-length + 1}) {
+        display: none;
+      };
+    }
+  }
+
+  @each $day, $number in $days {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($cell-size + $cell-gap) * $number;
+    }
+  }
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    background-color: #eee;
+    border: 1px solid #000;
+
+    width: $cell-size;
+    height: $cell-size;
+    line-height: $cell-size;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #f89fae;
+      transition-duration: 0.5s;
+      transform:  translateY(-20px);
+    }
+
+    @for $day-number from 1 through $calendars-month-lenght {
+      &:nth-child(#{$day-number})::before {
+        content: "#{$day-number}";
+      }
+    }
+  }
 }
