--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -5,20 +5,34 @@
   padding: $padding;
   max-width: calc(7 * (#{$cell-size} + #{$border-width} + #{$gap} + #{$padding}));
 
-  &--start-day-sun {
-    .calendar__cell:nth-child(1) {
-      margin-right: calc((6 * #{$cell-size}) + (6 * #{$border-width}) + (6 * #{$gap}) + (2 * #{$padding}));
+  @for $i from 1 through 31 {
+    .calendar__cell:nth-child(#{$i}) {
       width: #{$cell-size};
       height: #{$cell-size};
+      background-color: $cell-background;
+      border: $border-width solid $border-color;
+      position: relative;
+
+      &::before {
+        content: '#{$i}';
+        font-size: $font-size;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: $hover-color;
+        transform: translateY(-20px);
+        transition: transform 0.5s;
+      }
     }
   }
 
-  @for $dayWeek from 28 through 31 {
-    $monthLength: $dayWeek;
-
+  @for $monthLength from 28 through 31 {
     &--month-length-#{$monthLength} {
-      @include generate-calendar-cells($monthLength);
-
       .calendar__cell:nth-child(n + #{$monthLength + 1}) {
         display: none;
       }
@@ -28,8 +42,7 @@
   @each $name, $day in $start-days {
     &--start-day-#{$name} {
       .calendar__cell:first-child {
-        margin-left: $cell-size * $day - $gaps;
-        margin-right: 0;
+        margin-left: ($cell-size + $gaps) * $day;
       }
     }
   }
