--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   gap: $gap;
   padding: $padding;
+  margin: 100px auto;
   max-width: calc(7 * (#{$cell-size} + #{$border-width} + #{$gap} + #{$padding}));
 
   @for $i from 1 through 31 {
