--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,7 @@ body {
   padding: $cell-padding;
   gap: $cell-gap;
 
-  width: 7 * ($cell-size + $cell-padding);
+  width: 7 * ($cell-size + $cell-gap);
 
   @for $month-length from 28 through 31 {
     &--month-length--#{$month-length} {
@@ -25,7 +25,7 @@ body {
   }
 
   @each $day, $number in $days {
-    &--start-day--#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: ($cell-size + $cell-gap) * $number;
     }
   }
@@ -38,6 +38,7 @@ body {
 
     background-color: #eee;
     border: 1px solid #000;
+    box-sizing: border-box;
 
     width: $cell-size;
     height: $cell-size;
@@ -47,7 +48,7 @@ body {
       cursor: pointer;
       background-color: #f89fae;
       transition-duration: 0.5s;
-      transform:  translateY(-20px);
+      transform: translateY(-20px);
     }
 
     @for $day-number from 1 through $calendars-month-lenght {
