--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -27,12 +27,20 @@
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 
+    &:nth-child(1) {
+      margin-left: $field-width - $day-width; // Adjust this value as needed
+    }
+
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
       }
     }
+
+    $start-day-values: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4,'sat' 5, 'sun' 6;
+
+    @each $day, $position in $start-day-values {
+
+    }
   }
 }
-
-
