--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -9,10 +9,35 @@
   &__field {
     padding: 10px;
     display: flex;
-    // align-items: center;
     flex-wrap: wrap;
     gap: 1px;
     width: $field-width;
+
+    &--month-length {
+      @for $i from 28 through 31 {
+        &--#{$i} > :nth-child(n + #{$i + 1}) {
+          display: none;
+        }
+      }
+    }
+
+    &--start-day {
+
+      $start-day-values:
+        "mon" 0,
+        "tue" 1,
+        "wed" 2,
+        "thu" 3,
+        "fri" 4,
+        "sat" 5,
+        "sun" 6;
+
+      @each $day, $position in $start-day-values {
+        &--#{$day} > :first-child {
+          margin-left: ($day-width + $gap) * $position;
+        }
+      }
+    }
   }
 
   &__day {
@@ -27,20 +52,10 @@
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 
-    &:nth-child(1) {
-      margin-left: $field-width - $day-width; // Adjust this value as needed
-    }
-
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
       }
-    }
-
-    $start-day-values: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4,'sat' 5, 'sun' 6;
-
-    @each $day, $position in $start-day-values {
-
     }
   }
 }
