--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -10,7 +10,7 @@
     padding: 10px;
     display: flex;
     flex-wrap: wrap;
-    gap: 1px;
+    gap: $gap;
     width: $field-width;
 
     &--month-length {
@@ -22,15 +22,6 @@
     }
 
     &--start-day {
-
-      $start-day-values:
-        "mon" 0,
-        "tue" 1,
-        "wed" 2,
-        "thu" 3,
-        "fri" 4,
-        "sat" 5,
-        "sun" 6;
 
       @each $day, $position in $start-day-values {
         &--#{$day} > :first-child {
