--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,57 @@
+@import "./utils/variables.scss";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 710px;
+
+  &__day {
+    display: none;
+    transition: transform 0.5s;
+  }
+
+  @for $day-num from 1 through 31 {
+    &__day:nth-child(#{$day-num}):before {
+      content: "#{$day-num}";
+    }
+  }
+
+  @each $day, $number in $start-day {
+    &--start-day--#{$day} :nth-child(#{$number}) {
+      margin-left: 606px;
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length--#{$month-length} :nth-child(-n+#{$month-length}) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100px;
+      height: 100px;
+      background-color: #eee;
+      border: 1px solid #000;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  &__day:hover {
+    background-color: pink;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
 }
