add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,11 +1,9 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  gap: $gap;
   width: $cell-size * 7 + $cell-padding * 2;
   margin-top: 20px;
-  list-style: none;
-  padding: 0;
 
   &__cell {
     width: $cell-size;
