--- a/src/styles/blocks/month-length.scss
+++ b/src/styles/blocks/month-length.scss
@@ -1,7 +1,6 @@
-@for $i from 28 through 31 {
-  .calendar--month-length--#{$i} {
-    &:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
+@each $length in $month-lengths {
+  .calendar--month-length-#{$length}
+  .calendar__cell:nth-child(n+#{$length + 1}) {
+    display: none;
   }
 }
