--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,48 @@
+$cell-size: 100px;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  width: 800px;
+  margin: 50px 300px ;
+  display: flex;
+  flex-wrap: wrap;
+
+  &__day{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1px;
+    width: 100%;
+  }
+}
+
+.day {
+  border: 1px solid black;
+  width: $cell-size;
+  height: $cell-size;
+  background-color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial;
+  font-size: 30px;
+  transition: 500ms;
+
+  &__01 {
+    margin-left: 76.9%;
+  }
+
+  &:hover {
+    transform: translateY(-20px);
+    background-color: pink;
+  }
+}
+
+@for $i from 1 through 31 {
+  .day:nth-child(#{$i})::before {
+    content: '#{$i}' ;
+
+  }
 }
