add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 
-  &__day{
+  &__day {
     display: flex;
     flex-wrap: wrap;
     gap: 1px;
@@ -26,11 +26,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: Arial;
+  font-family: Arial, serif;
   font-size: 30px;
   transition: 500ms;
 
-  &__01 {
+  &:first-child {
     margin-left: 76.9%;
   }
 
@@ -42,7 +42,7 @@ body {
 
 @for $i from 1 through 31 {
   .day:nth-child(#{$i})::before {
-    content: '#{$i}' ;
+    content: "#{$i}" ;
 
   }
 }
