added task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -42,11 +42,18 @@
     box-sizing: border-box;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    transition: transform 500ms;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
       }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      cursor: pointer;
+      background-color: pink;
     }
   }
 }
