fix my code according to comments

--- a/src/styles/blocks/day.scss
+++ b/src/styles/blocks/day.scss
@@ -1,4 +1,4 @@
-.day {
+.calendar__day {
   text-align: center;
   line-height: $cell-height;
   box-sizing: border-box;
@@ -6,10 +6,10 @@
   height: $cell-height;
   width: $cell-width;
   background-color: #eee;
-  transition: transform 0.5s;
+  transition: transform, background-color  0.5s;
 
   @for $i from 1 through 31 {
-    &--#{$i}::before {
+    &:nth-child(#{$i})::before {
       content: "#{$i}";
     }
   }
