--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,7 +22,7 @@
   }
 
   @for $index from 1 through 31 {
-    &__block--day--#{$index}::before {
+    .calendar__block:nth-child(#{$index })::before {
       content: "#{$index}";
     }
   }
