Made ceils not empty

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -24,9 +24,9 @@
     transition-duration: 0.5s;
 
     &::before {
-      margin: auto
+      margin: auto;
     }
-    
+
     &:hover {
       cursor: pointer;
       background-color: pink;
