--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,12 +1,11 @@
 .calendar {
-  $day-size: 100px;
-  $gap-size: 1px;
+  @import 'calendar-vars.scss';
 
   display: flex;
   flex-wrap: wrap;
+  padding-top: 30px;
   width: $day-size * 7 + $gap-size * 6;
   gap: $gap-size;
-  margin: auto;
 
   &__day {
     box-sizing: border-box;
