fix margins and variables

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,2 +1,7 @@
-$start-day: "mon" 1, "tue" 2, "wed" 3, "thu" 4, "fri" 5, "sat" 6, "sun" 7;
+$start-day: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
 
+$gapSize: 1px;
+$dayCellSize: 100px;
+$CalendarWidth: (7 * $dayCellSize) + (6 * $gapSize);
+
+$HoverUpValue: 20px;
