--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,8 +15,8 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  width: 710px;
+  gap: $gapSize;
+  width: $CalendarWidth;
 
   &__day {
     display: none;
@@ -30,8 +30,8 @@ body {
   }
 
   @each $day, $number in $start-day {
-    &--start-day--#{$day} :nth-child(#{$number}) {
-      margin-left: 606px;
+    &--start-day--#{$day} :first-child {
+      margin-left: ($dayCellSize + $gapSize) * $number;
     }
   }
 
@@ -40,8 +40,8 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 100px;
-      height: 100px;
+      width: $dayCellSize;
+      height: $dayCellSize;
       background-color: #eee;
       border: 1px solid #000;
       font-family: Arial, Helvetica, sans-serif;
@@ -52,6 +52,6 @@ body {
   &__day:hover {
     background-color: pink;
     cursor: pointer;
-    transform: translateY(-20px);
+    transform: translateY(-$HoverUpValue);
   }
 }
