add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,69 @@
+$day-size: 100px;
+$day-color: #eee;
+$hover-color: pink;
+$transform-y: -20px;
+$w-calendar: 7 * ($day-size ) + 20;
+
 body {
   margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: $w-calendar;
+  margin: 0 auto;
+}
+
+.day-of-week {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
+  width: $day-size;
+  height: $day-size;
+  margin-right: 1px;
+  margin-bottom: 1px;
+  background-color: $day-color;
+  border: 1px solid #000;
+  cursor: pointer;
+  transition: all 0.5s ease;
+
+  &:hover {
+    background-color: $hover-color;
+    transform: translateY($transform-y);
+  }
+
+  $days: mon, tue, wed, thu, fri, sat, sun;
+
+  @for $day from 1 through 31 {
+    &--#{$day}::before {
+      content: "#{$day}";
+      display: block;
+      position: absolute;
+      font-size: 30px;
+    }
+  }
+
+  // @for $day-of-week from 28 through 31 {
+
+  // }
+
+  // @each $a in $days {
+
+  // }
+}
+
+.day-of-week--1 {
+  margin-left: 404px;
 }
