--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,4 +7,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
 }
