--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,71 +1,3 @@
-$month-length: 31;
-$day-size: 100px;
-$day-color: #eee;
-$hover-color: pink;
-$transform-y: -20px;
-$gap: 1px;
-$w-calendar: 7 * ($day-size + $gap) + 20;
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: $w-calendar;
-  margin: 0 auto;
-
-  $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
-
-  @each $day-of-week, $day-num in $days {
-    &--start-day-#{$day-of-week} &__day:first-child {
-      margin-left: #{$day-num * ($day-size + $gap)};
-    }
-  }
-}
-
-.calendar__day {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  box-sizing: border-box;
-  width: $day-size;
-  height: $day-size;
-  margin-right: $gap;
-  margin-bottom: $gap;
-  background-color: $day-color;
-  border: 1px solid #000;
-  cursor: pointer;
-  transition: all 0.5s ease;
-
-  &:hover {
-    background-color: $hover-color;
-    transform: translateY($transform-y);
-  }
-
-  @for $day from 1 through $month-length {
-    &:nth-child(#{$day})::before {
-      content: "#{$day}";
-      display: block;
-      position: absolute;
-      font-size: 30px;
-    }
-  }
-
-  @for $day from 28 through $month-length {
-    &:nth-child(#{$day}) {
-      background-color: red;
-    }
-  }
-
-}
+@import "variable.scss";
+@import "reset.scss";
+@import "style.scss";
