--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -3,9 +3,9 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  padding-inline: 10px;
+  padding-inline: $padding-calendar;
   gap: $gap;
-  width: ($number-of-days - 1) * ($day-size + $gap) + $day-size;
+  width: $day-size * 7 + $gap * 6 + $padding-calendar * 2;
 
   &__day {
     box-sizing: border-box;
