--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,55 @@
+@import "../variable";
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  width: $width-calendar;
+  display: flex;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $calendar-padding;
+
+  &__day {
+    height: $square-size;
+    width: $square-size;
+    border: 1px solid black;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color, transform 0.5s;
+    cursor: pointer;
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+    }
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+  }
+
+  @each $index, $margin in $start-day {
+    &--name-of-the-day-#{$margin} :first-child {
+      margin-left: calc(($index - 1)
+      * ($square-size + $gap));
+    }
+  }
+
+  @for $lastdays from 28 through 31 {
+    &--#{$lastdays}>:nth-child(n + #{$lastdays + 1}) {
+      display: none;
+    }
+  }
 }
