--- a/src/variable.scss
+++ b/src/variable.scss
@@ -1,16 +1,16 @@
 $square-size: 100px;
+$padding: 10px;
+$border-width: 1px;
 $gap: 1px;
-$calendar-padding: 10px;
-$columns: 7;
-$width-calendar: $square-size * ($columns + 1) +
-  $gap * 6 + $calendar-padding * 2;
+$overall-day-size: $square-size + 2 * $padding + 2 * $border-width;
+$max-width-calendar: 6 * $overall-day-size;
 $start-day:
   (
-    mon: 1,
-    tue: 2,
-    wed: 3,
-    thu: 4,
-    fri: 5,
-    sat: 6,
-    sun: 7
+    sun: 1,
+    mon: 2,
+    tue: 3,
+    wed: 4,
+    thu: 5,
+    fri: 6,
+    sat: 7
   );
