Fixed rendering number of days in a month

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -49,7 +49,7 @@
   }
 
   @for $day from 28 through 31 {
-    &--month-length--#{$day} :nth-child(1n + #{$day}) {
+    &--month-length--#{$day} :nth-child(1n + #{$day + 1}) {
       display: none;
     }
   }
