--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,12 @@
 
 body {
   margin: 0;
+  height: 100vh;
   font-family: Arial, sans-serif;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @import "blocks/calendar";
