--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,60 +5,52 @@ body {
 }
 
 .calendar {
-  width: 800px;
-  margin: 50px 300px ;
   display: flex;
   flex-wrap: wrap;
+  width: ($size-box * 7) + ($gap-box * 6);
+  gap: $gap-box;
+  margin: 100px auto;
 
-  &__day {
+  &__box {
+    box-sizing: border-box;
+    background-color: #eee;
+    height: $size-box;
+    width: $size-box;
+    border: 1px solid black;
     display: flex;
-    flex-wrap: wrap;
-    gap: 1px;
-    width: 100%;
-  }
-}
-
-.day {
-  border: 1px solid black;
-  width: $cell-size;
-  height: $cell-size;
-  background-color: #eee;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, serif;
-  font-size: 30px;
-  transition: 500ms;
-
-  &:first-child {
-    margin-left: 76.1%;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s;
   }
 
+  &__box::before {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
 
-  &:hover {
-    transform: translateY(-20px);
-    background-color: pink;
+  @for $i from 1 through 31 {
+    & :nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+
+  &__box:hover {
     cursor: pointer;
+    background-color: pink;
+    transform: translateY(-20px);
+  }
+
+  @each $day, $numOfDay in $days {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($numOfDay * $size-box) + ($gap-box * $numOfDay);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    $off-days: 31 - $i;
+
+    &--month-length--#{$i} :nth-last-child(-n + #{$off-days}) {
+      display: none;
+    }
   }
 }
-
-@for $i from 1 through 31 {
-  .day:nth-child(#{$i})::before {
-    content: "#{$i}" ;
-  }
-}
-
-@each $day, $numOfDay in $days {
-  &--start-day--#{$day} :first-child {
-    margin-left: ($numOfDay * $cell-size) + ($cell-size * $numOfDay);
-  }
-}
-
-@for $i from 28 through 31 {
-  $off-days: 31 - $i;
-
-  &--month-length--#{$i} :nth-last-child(-n + #{$off-days}) {
-    display: none;
-  }
-}
-
