--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,3 @@
-$cell-size: 100px;
-$gap: 1px;
+$size-box: 100px;
+$gap-box: 1px;
 $days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
