--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -69,6 +69,12 @@ body {
   }
 
   @for $day from 28 through 31 {
+    &--month-length--#{$day} :nth-child(1n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  @for $day from 1 through 28 {
     &--month-length-#{$day} :nth-child(1n + #{$day + 1}) {
       display: none;
     }
