--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,11 +3,11 @@ $gap: 1px;
 $day-size: 100px;
 $padding-calendar: 10px;
 $days: 31;
-$days-of-week:
-  "mon" 0,
-  "tue" ($day-size + $gap),
-  "wed" ($day-size + $gap) * 2,
-  "thu" ($day-size + $gap) * 3,
-  "fri" ($day-size + $gap) * 4,
-  "sat" ($day-size + $gap) * 5,
-  "sun" ($day-size + $gap) * 6;
+$days-of-week: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thur": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6);
