--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body,
+body * {
+  display: flex;
+}
+
 body {
   margin: 0;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
