--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,82 @@
+$font-family: arial, helvetica, sans-serif;
+$border-width: 1px;
+$day-size: 100px;
+$day-gap: 1px;
+$animation-duration: 0.5s;
+$days: 31;
+$border-color: #000;
+$monthLength: 29;
+
+$start-day: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  gap: $day-gap;
+  font-size: 30px;
+  flex-wrap: wrap;
+  width: ($day-size + $day-gap) * 7;
+  margin: 100px auto;
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: $day-size;
+    height: $day-size;
+    border: #{$border-width} solid $border-color;
+    box-sizing: border-box;
+    background-color: #eee;
+    transition: background-color $animation-duration,
+      transform $animation-duration;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+  }
+
+  @each $day-of-weak, $day-num in $start-day {
+    &--start-day-#{$day-of-weak} :first-child {
+      margin-left: $day-num * ($day-size + $day-gap);
+    }
+  }
+
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} :nth-child(1n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  @for $day from 1 through 28 {
+    &--month-length-#{$day} :nth-child(1n + #{$day + 1}) {
+      display: none;
+    }
+  }
 }
