--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -28,19 +28,19 @@
     }
   }
 
-  @each $day, $number in $days {
-    &--start-day-#{$day} {
-      &__day:first-child {
-        margin-left: ($day-size * $number + $gap *$number + $padding);
-      }
-    }
-  }
-
   @for $month-day-count from 28 through 31 {
     &--month-length--#{$month-day-count} {
       &__day:nth-child(n + #{$month-day-count + 1}) {
         display: none;
       }
+    }
+  }
+}
+
+@each $day, $number in $days {
+  .calendar--start-day--#{$day} {
+    .calendar__day:first-child {
+      margin-left: $full-day-size * $number;
     }
   }
 }
