Add task solution - Fix

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,3 +1,7 @@
 $cell-size: 100px;
 $gap: 1px;
 $padding: 10px;
+$month-length: 28;
+$days-of-week: mon, tue, wed, thu, fri, sat, sun;
+$start-day: fri;
+$month-lengths: 28, 29, 30, 31;
