--- a/src/styles/blocks/calnedra.scss
+++ b/src/styles/blocks/calnedra.scss
@@ -12,7 +12,6 @@
     align-items: center;
     justify-content: center;
     border: 1px black solid;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     background-color: #eee;
     transition: transform 0.5s;
@@ -31,17 +30,18 @@
   }
 }
 
-$days-of-week: mon, tue, wed, thu, fri, sat, sun;
-$start-day: fri;
-
 @each $day in $days-of-week {
-  .start-day-#{$day} {
-    margin-left: (index($days-of-week, $start-day) - 1) * ($cell-size + $gap);
+  &.calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: (index($days-of-week, $day) - 1) * ($cell-size + $gap);
+    }
   }
 }
 
-$month-length: 28;
-
-.calendar__day:nth-child(n + #{$month-length + 1}) {
-  display: none;
+@each $length in $month-lengths {
+  &.calendar--month-length-#{$length} {
+    .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
 }
