--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import "var.scss", "calendar.scss";
+
 body {
   margin: 0;
+  line-height: $calendar__item-size;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
