--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,8 @@
+@import "var.scss";
 @import "blocks/calendar";
-@import "var.scss"
 
 body {
   margin: 0;
-
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
 
