--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,4 +1,5 @@
 .calendar {
+  margin-inline: auto;
   width: 7 * $block-size + 6 * $gap;
   display: flex;
   flex-wrap: wrap;
@@ -16,10 +17,13 @@
     }
   }
 
-  &__day:hover {
+  &__day {
     cursor: pointer;
-    transform: translateY(-20px);
-    background-color: #ffbfcb;
-    transition-duration: 0.5s;
+    transition: background-color 0.5s, transform 0.5s;
+    
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+    }
   }
 }
