--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
-@import "var.scss";
+@import "var";
+
 @import "blocks/calendar";
 
 body {
@@ -7,6 +8,6 @@ body {
   height: 100vh;
 
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
