--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -27,12 +27,12 @@
     box-sizing: border-box;
     background-color: #eee;
     font-size: 30px;
-    transition: transform 0.5s;
+    transition: all 0.5s ease-out;
 
     &:hover {
       cursor: pointer;
       background-color: #ffc0cb;
-      transform: translateY(-20 px);
+      transform: translateY(-20px);
     }
 
     @for $day from 1 through $number-of-days {
