--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -27,7 +27,7 @@
     box-sizing: border-box;
     background-color: #eee;
     font-size: 30px;
-    transition: all 0.5s ease-out;
+    transition: transform 0.5s ease-out;
 
     &:hover {
       cursor: pointer;
