add_task_calendar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
-body {
-  margin: 0;
+@import "./blocks/utils/variables";
+
+@import "./blocks/calendar";
+
+html {
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
