add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -25,7 +25,7 @@
 
     @for $day from 1 through $last_day {
       &:nth-child(#{$day})::before {
-        content: '#{$day}';
+        content: "#{$day}";
       }
     }
   }
